--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Rock Paper Scissors Game</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Rock Paper Scissors Game</h1>
-  <div class="container">
-    <div class="player">
-      <h2>Player</h2>
-      <button id="rock" onclick="playRound('rock')">Rock</button>
-      <button id="paper" onclick="playRound('paper')">Paper</button>
-      <button id="scissors" onclick="playRound('scissors')">Scissors</button>
-      <p id="player-score">Score: 0</p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 class="header">Rock Paper Scissors Game</h1>
+    <div class="container">
+      <div class="player">
+        <h2>Player</h2>
+        <div class="image-container">
+          <img src="/images/rock.jpg" alt="" id="rock" />
+          <img src="/images/paper.jpg" alt="" id="paper" />
+          <img src="/images/scissors.jpg" alt="" id="scissors" />
+        </div>
+        <!-- <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button> -->
+        <p id="player-score">Score: 0</p>
+      </div>
+      <div class="computer">
+        <h2>Computer</h2>
+        <p>Choose your move to start the game</p>
+        <p id="computer-move"></p>
+        <p id="computer-score">Score: 0</p>
+      </div>
     </div>
-    <div class="computer">
-      <h2>Computer</h2>
-      <p>Choose your move to start the game</p>
-      <p id="computer-move"></p>
-      <p id="computer-score">Score: 0</p>
+    <div class="status-container">
+      <div class="status"></div>
     </div>
-  </div>
-  <div id="status-box"></div>
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
