solved images not shown on page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="player">
         <h2>Player</h2>
         <div class="image-container">
-          <img src="/images/rock.jpg" alt="" id="rock" />
-          <img src="/images/paper.jpg" alt="" id="paper" />
-          <img src="/images/scissors.jpg" alt="" id="scissors" />
+          <img src="./images/rock.jpg" alt="" id="rock" />
+          <img src="./images/paper.jpg" alt="" id="paper" />
+          <img src="./images/scissors.jpg" alt="" id="scissors" />
         </div>
         <p id="player-score">Score: 0</p>
       </div>
